2010-08-24 Chris Morley

	* src/format/mdlformat.cpp: add -aP format to read only title
	and properties only. Speeds up filtering of sdf datasets based on
	their properties.
	 
	* src/ops/opisomorph.cpp: "extract" parameter on -s option to
	retain only matched atoms. Useful for preparing templates for
	--gen2D

2010-08-24 Chris Morley
	
	* src/alias.cpp(FormulaParse): return false when lower case letter
	encountered. Reduce chance of misinterpretation in this backstop
	function.
	
	* src/depict/depict.cpp: output D and T
	
	* src/formats/gaussformat.cpp: fix bug with diatomics looking for
	"Rotational Constants" when ther is only one.
	
	* windows-vc2008/Distribution/NSISScriptToCreateInstaller.nsi:
	put shortcut to babel guide to http://baoilleach.webfactional.com
    for the time being


2010-08-23 Noel O'Boyle

	* src/formats/mdlformat.cpp: Make the "s" option work by resurrecting
	some old code I had written and then subsequently removed. Atom
	parities will now be used for 0D structures, but only if "s" is
	specified.

2010-08-23 Noel O'Boyle

	* include/openbabel/stereo/stereo.h, perception.cpp: Add doxygen docs
	for TetStereoTo0D and change return value to bool.

2010-08-23  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/data.cpp (GetAtomicNum): Handle "Hl" hydrogen label from CIF
	PR#3048959. Add warning when an unknown element label is provided.

	* src/parsmart.cpp, include/openbabel/parsmart.h: Add thread-safe
	SMARTS matching API, PR#3949927, thanks to David Koes.

	* src/formats/mol2format.cpp: Disable tellg/seekg forwarding,
	which is very slow with gzip-compressed mol2.gz
	files. PR#3048758.

	* src/formats/outformat.cpp: Handle new GAMESS-US/WinGAMESS output
	files.

	* src/kekulize.cpp: Add deeper recursion for aromaticity/kekule
	determination. Solves a number of semi-rare molecules with 6+
	fused 6-membered rings.

	* test/files/forcefield.sdf: Fix Esomeprazole molecule -- not
	protonated. This caused an impossible aromatization issue.
